# basy

./: noxfile.py  pyproject.toml
src/: __init__.py  registry.py
src/cli/: __init__.py  add_template.py  list_templates.py  remove_template.py  use_template.py
src/core/: __init__.py  add_template.py  execute_use_template.py
src/models/: __init__.py  settings.py  template.py
tests/unit/: test_registry.py
